RESOLVED FIXED55550
Assertion fails when a form validation bubble appears
https://bugs.webkit.org/show_bug.cgi?id=55550
Summary Assertion fails when a form validation bubble appears
Kent Tamura
Reported 2011-03-01 21:04:07 PST
Assertion fails when a form validation bubble appears
Attachments
Patch (5.86 KB, patch)
2011-03-01 21:08 PST, Kent Tamura
no flags
Patch 2 (8.46 KB, patch)
2011-03-01 21:13 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2011-03-01 21:08:33 PST
Kent Tamura
Comment 2 2011-03-01 21:13:11 PST
Created attachment 84365 [details] Patch 2 Add the test to Skipped of some platforms
Dimitri Glazkov (Google)
Comment 3 2011-03-01 21:14:37 PST
Comment on attachment 84365 [details] Patch 2 yup. I broke it, I think :)
Dimitri Glazkov (Google)
Comment 4 2011-03-01 21:15:12 PST
Comment on attachment 84365 [details] Patch 2 Can you pls remove the WebPreferences changes though?
Kent Tamura
Comment 5 2011-03-01 21:17:57 PST
(In reply to comment #4) > Can you pls remove the WebPreferences changes though? The new test would make no sense if the WebPreference change was removed.
Dimitri Glazkov (Google)
Comment 6 2011-03-01 21:46:48 PST
(In reply to comment #5) > (In reply to comment #4) > > Can you pls remove the WebPreferences changes though? > > The new test would make no sense if the WebPreference change was removed. Ah, sorry! I was looking at the wrong thing.
Kent Tamura
Comment 7 2011-03-01 23:04:31 PST
Comment on attachment 84365 [details] Patch 2 Clearing flags on attachment: 84365 Committed r80097: <http://trac.webkit.org/changeset/80097>
Kent Tamura
Comment 8 2011-03-01 23:04:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.