2011-03-01  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        Assertion fails when a form validation bubble appears
        https://bugs.webkit.org/show_bug.cgi?id=55550

        * fast/forms/interactive-validation-attach-assertion-expected.txt: Added.
        * fast/forms/interactive-validation-attach-assertion.html: Added.
        * platform/gtk/Skipped:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:
2011-03-01  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        Assertion fails when a form validation bubble appears
        https://bugs.webkit.org/show_bug.cgi?id=55550

        Test: fast/forms/interactive-validation-attach-assertion.html

        * html/ValidationMessage.cpp:
        (WebCore::ValidationMessage::buildBubbleTree):
         Just remove unnecessary attach().
2011-03-01  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        Assertion fails when a form validation bubble appears
        https://bugs.webkit.org/show_bug.cgi?id=55550

        Test: fast/forms/interactive-validation-attach-assertion.html

        * DumpRenderTree/chromium/WebPreferences.cpp:
        (WebPreferences::applyTo): Enable the interactive validation feature by
          default. This matches to Chromium browser.

Canonical link: https://commits.webkit.org/69994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80097 268f45cc-cd09-0410-ab3c-d52691b4dbfc